--- a/src/globals.css
+++ b/src/globals.css
@@ -37,6 +37,10 @@
   --header-height: 3.8rem; /* Adjust based on your Header height */
   --footer-height: 3rem; /* Adjust based on your Footer height */
   --content-height: calc(100vh - var(--header-height) - var(--footer-height));
+
+  --header-height2: 4vh; /* Adjust based on your Header height */
+  --footer-height2: 4vh; /* Adjust based on your Footer height */
+  --content-height2: calc(100vh - var(--header-height2) - var(--footer-height2));
   
 
   --primary-crypto: #099dd4;
@@ -303,6 +307,10 @@
 
 .content-height {
   height: calc(100vh - var(--header-height) - var(--footer-height));
+}
+
+.content-height2 {
+  height: calc(100vh - var(--header-height2) - var(--footer-height2));
 }
 
 @theme inline {
